Fix hero scroll on Mobile

--- a/src/classes.css
+++ b/src/classes.css
@@ -58,7 +58,7 @@
 
 .hero {
   height: 100vh;
-  width: 100svw;
+  width: 100vw;
   padding: 0;
   margin: 0;
 }
